objects/Consensus__cConsensusUserInfo__c.object
<CustomObject>
    <description>Store information from Consensus about all active SF users in Salesforce</description>
    <fields>
        <fullName>Consensus__Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consensus__Consensus_User_Group_UUID__c</fullName>
        <label>Consensus User Group UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consensus__Consensus_User_UUID__c</fullName>
        <label>Consensus User UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consensus__Consensus_email__c</fullName>
        <label>Consensus email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Consensus__SF_email__c</fullName>
        <label>Salesforce email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <label>Consensus User Info</label>
    <listViews>
        <fullName>Consensus__All</fullName>
        <columns>Consensus__SF_email__c</columns>
        <columns>Consensus__Consensus_User_UUID__c</columns>
        <columns>Consensus__Consensus_User_Group_UUID__c</columns>
        <columns>Consensus__Consensus_email__c</columns>
        <columns>Consensus__Admin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Consensus User Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consensus Users Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>